--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -3,9 +3,7 @@
         .span5#panel-left
             .content
                 %h4
-                    Extensive Visits to High Performing
-                    %br
-                    Schools across the Country
+                    Research, Internships and Teaching Experience at High Performing Schools
                 %i Achievement First Network
                 %ul
                     %li
