--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -14,15 +14,6 @@
             .content
                 %h2 Our Partners
                 %p.lead We are currently partnering with several preschools in order to help bridge the gap and provide our students with a smoother transition from preschool to kindergarten.
-                %p We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
-                %p Furthermore, community resources have been an important connection.
-                %p We look to continue to partnership that will help support our students and families and that will help us close the gap.
-            .center
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
-                %img{:src => "//placehold.it/100x75"}
+                %p.mini-lead We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
+                %p.mini-lead Furthermore, community resources have been an important connection.
+                %p.mini-lead We look to continue to partnership that will help support our students and families and that will help us close the gap.
