--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -12,14 +12,14 @@
                                 %p Executive Director
                     .span9
                         %p.lead Rick has experience in developing successful schools for children in Minneapolis. He was a member of the founding leadership team of Cristo Rey Jesuit High School in the Phillips neighborhood of South Minneapolis and the founding board of directors of Minneapolis College Preparatory. He has 14 years of experience as a teacher, and eight years in school administration.
-                        %p.text-info rickcampion@prodeoacademy.org
-                        %p.text-info (612) 559-4881
+                        %p.mini-lead.text-info rickcampion@prodeoacademy.org
+                        %p.mini-lead.text-info (612) 559-4881
                 %br
                 .row
                     .span9
                         %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Master Degree as a Literacy Specialist from Columbia University.
-                        %p.text-info chanceyanderson@prodeoacademy.org
-                        %p.text-info (347) 982-5061
+                        %p.mini-lead.text-info chanceyanderson@prodeoacademy.org
+                        %p.mini-lead.text-info (347) 982-5061
 
                     .span3
                         .thumbnail
