--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -6,22 +6,22 @@
                 .container
                     .carousel-caption
                         %h1 College Starts Here
-                        %p.lead Enroll your child today!
-                        %a.btn.btn-large.btn-inverse More info &raquo;
+                        %p.lead Enroll your child today
+                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_two.pdf", :target => "_blank"} More info &raquo;
             .item
                 %img{:src => "/assets/index/carousel.2.jpg"}
                 .container
                     .carousel-caption
                         %h1 Close the Gap
                         %p.lead Engage in volunteer and career opportunities
-                        %a.btn.btn-large.btn-inverse More info &raquo;
+                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_one.pdf", :target => "_blank"} More info &raquo;
             .item
                 %img{:src => "/assets/index/carousel.3.jpg"}
                 .container
                     .carousel-caption
                         %h1 Build the Future
-                        %p.lead Description goes here...
-                        %a.btn.btn-large.btn-inverse More info &raquo;
+                        %p.lead Help us close the gap
+                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_three.pdf", :target => "_blank"} More info &raquo;
 .container
     .row.center#index
         .span4
@@ -33,7 +33,7 @@
                         %span.caret
                     %ul.dropdown-menu
                         %li
-                            %a{:href => "/assets/handout_one.pdf", :target => "_blank"} Why choose Prodeo Academy?
+                            %a{:href => "/assets/handout_two.pdf", :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
                             %a{:href => "/"} Student Application
@@ -49,7 +49,7 @@
                         %span.caret
                     %ul.dropdown-menu
                         %li
-                            %a{:href => "/assets/handout_two.pdf", :target => "_blank"} Why choose Prodeo Academy?
+                            %a{:href => "/assets/handout_one.pdf", :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
                             %a{:href => ""} Who we are looking for
