--- a/app/views/results/achievement_gap.haml
+++ b/app/views/results/achievement_gap.haml
@@ -7,22 +7,27 @@
                 %p.lead At Prodeo Academy, we are creating a strong culture and focused learning environment that addresses each of these gaps, so that our students are prepared for success.
                 %br
 
-                %p.lead The Preparation Gap:
+                %p.mini-lead
+                    %b The Preparation Gap:
                 %blockquote Prodeo Academy partners with parents from the first day of school, ensuring readiness to learn at every stage.
                 %br
 
-                %p.lead The Belief Gap:
+                %p.mini-lead
+                    %b The Belief Gap:
                 %blockquote Prodeo Academy is focused on exceptional results because we know our students can achieve them. We are committed to a culture of high expectations for students and staff, with accountability and support built in to every step of a child’s education.
                 %br
 
-                %p.lead The Time Gap:
+                %p.mini-lead
+                    %b The Time Gap:
                 %blockquote Prodeo has an extended school day and year. Individualized learning is built into the curriculum for every student, maximizing each school day to its fullest. We also partner with organizations to offer after-school and summer programming.
                 %br
 
-                %p.lead The Teaching Gap:
+                %p.mini-lead
+                    %b The Teaching Gap:
                 %blockquote Our teachers are experienced professionals who have demonstrated success in helping students reach their full potential. Our teachers are fully committed to the shared values of the school and will hold themselves accountable for student achievement.
                 %br
 
-                %p.lead The Leadership Gap:
+                %p.mini-lead
+                    %b The Leadership Gap:
                 %blockquote Our leaders have travelled across the country and they are bringing best practices in high performing schools across the country to Prodeo Academy. They have experience from school leadership, curriculum development, teacher coaching, fundraising, and most importantly, academic results.
                 %br
