Simplify place holders

--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -2,13 +2,13 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "//placehold.it/275x75"}
+                %img{:src => placehold(275, 75)}
                 %br
                 %br
-                %img{:src => "//placehold.it/275x100"}
+                %img{:src => placehold(275, 100)}
                 %br
                 %br
-                %img{:src => "//placehold.it/275x75"}
+                %img{:src => placehold(275, 75)}
         .span8#panel-right
             .content
                 %h2 Our Partners
