--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -2,10 +2,10 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "//placehold.it/275x125"}
+                %img{:src => placehold(275, 125)}
                 %br
                 %br
-                %img{:src => "//placehold.it/275x125"}
+                %img{:src => placehold(275, 125)}
         .span8#panel-right
             .content
                 %h2 Apply to Teach
