--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -2,10 +2,10 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "//placehold.it/275x75"}
+                %img{:src => placehold(275, 75)}
                 %br
                 %br
-                %img{:src => "//placehold.it/275x175"}
+                %img{:src => placehold(275, 175)}
         .span8#panel-right
             .content
                 %h2 Apply to Tutor
