--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -58,13 +58,13 @@
                                         %small Board Secretary, Senior Business Analyst, Target
                             %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/175x200"}
+                                    %img{:src => placehold(175, 200)}
                                     .caption
                                         %h4 Chancey Anderson
                                         %small Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon
                             %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/175x200"}
+                                    %img{:src => placehold(175, 200)}
                                     .caption
                                         %h4 Rick Campion
                                         %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
