Another round of changes

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -10,10 +10,22 @@
 
                             %li.span3
                                 .thumbnail
+                                    %img{:src => "/assets/board/john_alexander.png"}
+                                    .caption
+                                        %h4 John Alexander
+                                        %small Board Chair, Head of School, Groves Academy
+                            %li.span3
+                                .thumbnail
                                     %img{:src => "/assets/board/kerry_givens.png"}
                                     .caption
                                         %h4 Kerry Givens
                                         %small Executive Director, South Minneapolis YMCA
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/kevin_cattoor.png"}
+                                    .caption
+                                        %h4 Kevin Cattoor
+                                        %small Treasurer, Founder, KC Consulting; CEO Skybridge Americas
                             %li.span3
                                 .thumbnail
                                     %img{:src => "/assets/board/neda_kellogg.png"}
@@ -34,22 +46,10 @@
                                         %small Community and Church Liaison, North Minneapolis
                             %li.span3
                                 .thumbnail
-                                    %img{:src => "/assets/board/john_alexander.png"}
-                                    .caption
-                                        %h4 John Alexander
-                                        %small Board Chair, Head of School, Groves Academy
-                            %li.span3
-                                .thumbnail
                                     %img{:src => "/assets/board/lidi_guzman.png"}
                                     .caption
                                         %h4 Lidibette Rosado-Guzm&aacute;n
                                         %small Diversity Coordinator, World Language Teacher
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/kevin_cattoor.png"}
-                                    .caption
-                                        %h4 Kevin Cattoor
-                                        %small Treasurer, Founder, KC Consulting
                             %li.span3
                                 .thumbnail
                                     %img{:src => "/assets/board/jill_johnson.png"}
