--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -6,7 +6,7 @@
                 .row
                     .span3
                         .thumbnail
-                            %img{:src => placehold(180, 140)}
+                            / %img{:src => placehold(180, 140)}
                             .caption
                                 %h4 Rick Campion
                                 %p Executive Director
@@ -23,7 +23,7 @@
 
                     .span3
                         .thumbnail
-                            %img{:src => placehold(180, 140)}
+                            / %img{:src => placehold(180, 140)}
                             .caption
                                 %h4 Chancey Anderson
                                 %p Principal
@@ -31,7 +31,7 @@
                 .row
                     .span3
                         .thumbnail
-                            %img{:src => placehold(180, 140)}
+                            / %img{:src => placehold(180, 140)}
                             .caption
                                 %h4 Rachel Hemsey
                                 %p Founding Teacher
