--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,6 +105,12 @@ ul.dropdown-menu li a:hover {
 	box-shadow: 0 5px 10px -5px #000;
 	position: relative;
 	z-index: 3;
+    width: 1000px;
+}
+
+.container#carousel {
+    width: 1000px;
+    height: 475px;
 }
 
 .carousel .container {
@@ -112,18 +118,20 @@ ul.dropdown-menu li a:hover {
     right: 0;
     bottom: 0;
     left: 0;
+    top: 175px;
     padding-left: 40px;
-    width: 900px;
+    width: 1000px;
 	z-index: 600;
 }
 
-.carousel .item {
-    height: 400px;
-	z-index: 600;
-}
 .carousel img {
     min-width: 100%;
-    min-height: 400px;
+    min-height: 475px;
+}
+
+.carousel .item {
+    width: 1000px;
+    height: 475px;
 	z-index: 600;
 }
 
@@ -145,10 +153,11 @@ ul.dropdown-menu li a:hover {
     line-height: 1.25;
     color: #fff;
     text-shadow: 0 2px 10px rgba(0,0,0,.8);
+    margin-top: 5px;
 }
 
 .carousel-caption .btn {
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .center {
