--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -1,27 +1,13 @@
-.container
-    #carousel.carousel.slide
+.container#carousel
+    .carousel.slide
         .carousel-inner
             .item.active
-                %img{:src => "/assets/index/carousel.1.jpg"}
+                %img{:src => "/assets/index/carousel.jpg"}
                 .container
                     .carousel-caption
                         %h1 College Starts Here
                         %p.lead Enroll your child today
                         %a.btn.btn-large.btn-inverse{:href => "/assets/handout_two.pdf", :target => "_blank"} More info &raquo;
-            .item
-                %img{:src => "/assets/index/carousel.2.jpg"}
-                .container
-                    .carousel-caption
-                        %h1 Close the Gap
-                        %p.lead Engage in volunteer and career opportunities
-                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_one.pdf", :target => "_blank"} More info &raquo;
-            .item
-                %img{:src => "/assets/index/carousel.3.jpg"}
-                .container
-                    .carousel-caption
-                        %h1 Build the Future
-                        %p.lead Help us close the gap
-                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_three.pdf", :target => "_blank"} More info &raquo;
 .container
     .row.center#index
         .span4
@@ -36,7 +22,7 @@
                             %a{:href => "/assets/handout_two.pdf", :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
-                            %a{:href => "/"} Student Application
+                            %a{:href => "#"} Student Application
                         %li.divider
                         %li
                             %a{:href => "#stay-in-touch", :data => {:toggle => "modal"}} Stay in Touch
@@ -52,7 +38,7 @@
                             %a{:href => "/assets/handout_one.pdf", :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
-                            %a{:href => ""} Who we are looking for
+                            %a{:href => "/assets/handout_four.pdf"} Who we are looking for
                         %li.divider
                         %li
                             %a{:href => "/contact/apply_to_teach"} Apply to Teach
@@ -77,7 +63,7 @@
                             %a{:href => "#supporters", :data => {:toggle => "modal"}} Supporters
                         %li.divider
                         %li
-                            %a{:href => ""} Invest
+                            %a{:href => "#"} Invest
 #stay-in-touch.modal.hide.fade
     .modal-header
         %button.close{:type => "button", :data => {:dismiss => "modal"}} x
