--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -2,10 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => placehold(275, 125)}
-                %br
-                %br
-                %img{:src => placehold(275, 125)}
+                %img{:src => "/assets/placeholders/seven.jpg"}
         .span8#panel-right
             .content
                 %h2 Apply to Teach
@@ -14,6 +11,6 @@
                     %br
                     %br
                     %p
-                        %b Chancy Anderson, Principal
+                        %b Chancey Anderson, Principal
                     %p.text-info chanceyanderson@prodeoacademy.org
                     %p.text-info (347) 982-5061
