--- a/app/views/contact/enroll_your_child.haml
+++ b/app/views/contact/enroll_your_child.haml
@@ -1,1 +1,10 @@
-= render :file => "_partials/under_constrution"
+.container
+    .row
+        .span4#panel-left
+            .content
+                %h3 Sidebar Content
+                %p
+        .span8#panel-right
+            .content
+                %h2 Enroll Your Child
+                %p This page isn't ready yet!
