--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -2,10 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => placehold(275, 175)}
-                %br
-                %br
-                %img{:src => placehold(275, 75)}
+                %img{:src => "/assets/placeholders/three.jpg"}
         .span8#panel-right
             .content
                 %h2 Volunteer
