--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -2,13 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => placehold(275, 75)}
-                %br
-                %br
-                %img{:src => placehold(275, 100)}
-                %br
-                %br
-                %img{:src => placehold(275, 75)}
+                %img{:src => "/assets/placeholders/eight.jpg"}
         .span8#panel-right
             .content
                 %h2 Our Partners
