--- a/app/views/about/who_we_are.haml
+++ b/app/views/about/who_we_are.haml
@@ -16,11 +16,11 @@
                     %b Knowledge, Conscientiousness, Compassion, Integrity,
                     and
                     %b Respect.
-                %img.pull-right{:src => placehold(350, 125)}
+                %img.pull-right{:src => "/assets/whoweare/one.jpg"}
                 %p Prodeo Academy is a K-8, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.
-                %img.pull-left{:src => placehold(250, 100)}
                 %p
                     At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
+                    %img.pull-left{:src => "/assets/whoweare/two.jpg"}
                     %i we strive to produce results that are among the highest performing schools in the country.
                     Together with our families, we provide a structure and culture of success.
                 %p.lead We invite you to learn more about our inspiring community.
