--- a/app/views/approach/vision.haml
+++ b/app/views/approach/vision.haml
@@ -1,27 +1,22 @@
 .container
     .row
-        .span4#panel-left
-            .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        .span8#panel-right
+        .span12#panel-main
             .content
                 %h2 Our Vision
-                %p.center.lead
-                    %i
-                        Prodeo Academy implements best practices
-                        %br
-                        from across the country to close the achievement gap.
-                        %br
-                        %br
-                        Prodeo Academy offers rigorous academics and individualized
-                        %br
-                        instruction in a joyful learning environment.
-                        %br
-                        %br
-                        Through this structure and culture, our students will
-                        %br
-                        experience a college preparatory education and gain
-                        %br
-                        the tools to realize their full potential in life.
-
+                .row
+                    .span5
+                        %p.center.lead
+                            %i
+                                Prodeo Academy implements best practices
+                                from across the country to close the achievement gap.
+                                %br
+                                %br
+                                Prodeo Academy offers rigorous academics and individualized
+                                instruction in a joyful learning environment.
+                                %br
+                                %br
+                                Through this structure and culture, our students will
+                                experience a college preparatory education and gain
+                                the tools to realize their full potential in life.
+                    .span7
+                        %img{:src => "/assets/placeholders/one.jpg"}
