--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -2,10 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => placehold(275, 75)}
-                %br
-                %br
-                %img{:src => placehold(275, 175)}
+                %img{:src => "/assets/placeholders/five.jpg"}
         .span8#panel-right
             .content
                 %h2 Apply to Tutor
