--- a/app/views/results/results.haml
+++ b/app/views/results/results.haml
@@ -1,12 +1,12 @@
 .container
     .row
-        .span4#panel-left
-            .content
-                %h3 Sidebar Content
-                %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        .span8#panel-right
+        .span12#panel-main
             .content
                 %h2 Meaningful and Measurable Results
-                %p.lead Prodeo Academy is entering its first year of operation.
-                %p.lead Our academic results will be posted and our staff will hold itself accountable for all results.
-                %p.lead Measurable results are the primary way we will define success.
+                .row
+                    .span7
+                        %p.lead Prodeo Academy is entering its first year of operation.
+                        %p.lead Our academic results will be posted and our staff will hold itself accountable for all results.
+                        %p.lead Measurable results are the primary way we will define success.
+                    .span5
+                        %img{:src => "/assets/placeholders/two.jpg"}
