Comment out enroll your child until it's done

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -46,7 +46,7 @@
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Contact Us
                                 %span.caret
-                            = submenu(["Enroll Your Child", "Apply to Teach", "Apply to Tutor", "Volunteer"], "Contact")
+                            = submenu(["Apply to Teach", "Apply to Tutor", "Volunteer"], "Contact")
         = yield
         %footer
             .container
