--- a/app/views/student_life/typical_day.haml
+++ b/app/views/student_life/typical_day.haml
@@ -24,11 +24,11 @@
                         %tr
                             %td 8:15 – 9:15
                             %td 1 hour
-                            %td Reading Block I (Small Group Activities and Instruction / 5 Students)
+                            %td Reading Block I (Small Group Activities and Instruction)
                         %tr
                             %td 9:15 – 10:15
                             %td 1 hour
-                            %td Reading/Tutors (Small Group Activities and Instruction / 5 Students)
+                            %td Reading/Tutors (Small Group Activities and Instruction)
                         %tr
                             %td 10:15 – 10:30
                             %td 15 minutes
@@ -36,11 +36,11 @@
                         %tr
                             %td 10:30 – 11:30
                             %td 1 hour
-                            %td Reading Block II (Small Group Activities and Instruction / 5 Students)
+                            %td Reading Block II (Small Group Activities and Instruction)
                         %tr
                             %td 11:30 – 12:00
                             %td 30 minutes
-                            %td Math/Tutors (Small Group / 5 Students)
+                            %td Math/Tutors (Small Group)
                         %tr
                             %td 12:00 – 12:30
                             %td 30 minutes
@@ -48,7 +48,7 @@
                         %tr
                             %td 12:30 – 1:00
                             %td 30 minutes
-                            %td PAL - Physically Active Learning (Small Group / 5 Students)
+                            %td PAL - Physically Active Learning (Small Group)
                         %tr
                             %td 1:00 – 1:30
                             %td 30 minutes
