--- a/app/views/student_life/academics.haml
+++ b/app/views/student_life/academics.haml
@@ -19,6 +19,7 @@
                     %u proven, successful methods of teaching
                     at some of the highest performing schools in the country, the curriculum at Prodeo Academy will prepare each child for college beginning on the first day of kindergarten.
                 %p Prodeo Academy uses research-based, proven curriculum - and we measure the results every step of the way.
+                %img.pull-left{:src => "/assets/placeholders/eleven.jpg"}
                 %p.lead  Focus on Literacy and Numeracy
                 %p The ability to read well and understand mathematics are the most important factors in a students' success in school.
                 %p At Prodeo Academy, we emphasize literacy and numeracy. Every one of our students has over 90 minutes of language arts instruction (phonics, reading comprehension, and vocabulary) daily. Our students also have over 90 minutes of math instruction each day. Social studies and science are also important components of our curriculum.
