Add april and may minutes to bottom of board page

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -69,5 +69,13 @@
                                         %h4 Rick Campion
                                         %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
                         %p.center.lead
-                            Our Board meets at 7pm on the first Monday of every month at
-                            %i 3751 Sheridan Ave N.
+                            Our Board meets every third Wednesday of the month at 5:30pm at
+                            %i 1555 40th Ave NE, Mpls, MN 55421
+                .row
+                    .span12
+                        %h3 Past board minutes
+                        %ul
+                            %li
+                                %a{:href => "https://docs.google.com/document/d/1ViAi-SYQn5tk30nmJN1oAzmhR9ZyAIETa02C-7qxZk8/edit", :target => "_blank"} April Minutes
+                            %li
+                                %a{:href => "https://docs.google.com/document/d/1VSyK2PGw1NK8RiSgJYqKvpX97p0knyqD-5LibgPtxo0/edit", :target => "_blank"} May Minutes
