Add two business sponsors

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -110,7 +110,11 @@
             %b Support from Coporations and Foundations
         %ul.unstyled
             %li
+                %i Fredrikson & Byron, P.A.
+            %li
                 %i General Mills Foundation
+            %li
+                %i Heartland Investigative Group
             %li
                 %i The Lawlor Group
             %li
