--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -10,3 +10,4 @@
                 %p.mini-lead We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
                 %p.mini-lead Furthermore, community resources have been an important connection.
                 %p.mini-lead We look to continue to develop partnerships that will help support our students and families and that will help us close the gap.
+                = render :partial => "_partials/partners"
