Add Boston Scientific

--- a/app/views/_partials/_partners.haml
+++ b/app/views/_partials/_partners.haml
@@ -23,6 +23,8 @@
     %b Support from Coporations and Foundations
 %ul.unstyled
     %li
+        %i Boston Scientific
+    %li
         %i Fredrikson & Byron, P.A.
     %li
         %i General Mills Foundation
