Add June agenda

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -79,6 +79,9 @@
                                 %a{:href => "https://docs.google.com/document/d/1ViAi-SYQn5tk30nmJN1oAzmhR9ZyAIETa02C-7qxZk8/edit", :target => "_blank"} April Minutes
                             %li
                                 %a{:href => "https://docs.google.com/document/d/1VSyK2PGw1NK8RiSgJYqKvpX97p0knyqD-5LibgPtxo0/edit", :target => "_blank"} May Minutes
+                            %li
+                                %a{:href => "https://docs.google.com/document/d/1VRB4N9ie63htXtfydodgulIyMjLWjJHXQ9TS-9ld9y0/edit", :target => "_blank"} June Agenda
+                        %br
                         %p Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
                         %p Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
                         %p
