Fix iqsmn.org link

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -88,4 +88,5 @@
                         %p Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
                         %p
                             Persons interested in learning more about IQS and their oversight of Prodeo Academy may go to:
-                            %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org/ or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
+                            %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org
+                            or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
