Add Leonard Street and Deinard

--- a/app/views/_partials/_partners.haml
+++ b/app/views/_partials/_partners.haml
@@ -33,6 +33,8 @@
     %li
         %i The Lawlor Group
     %li
+        %i Leonard Street and Deinard
+    %li
         %i Lillehei Family Foundation
     %li
         %i Minneapolis Foundation
