--- a/app/views/_partials/_partners.haml
+++ b/app/views/_partials/_partners.haml
@@ -33,7 +33,7 @@
     %li
         %i The Lawlor Group
     %li
-        %i Leonard Street and Deinard
+        %i Leonard, Street and Deinard
     %li
         %i Lillehei Family Foundation
     %li
