--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -17,7 +17,7 @@
                 %br
                 .row
                     .span9
-                        %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Master Degree as a Literacy Specialist from Columbia University.
+                        %p.lead Chancey has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level. She taught for several years for the Cristo Rey Network in Minneapolis and for the Uncommon Schools Network in NY. She also has her Masters Degree as a Literacy Specialist from Columbia University.
                         %p.mini-lead.text-info chanceyanderson@prodeoacademy.org
                         %p.mini-lead.text-info (347) 982-5061
 
@@ -36,5 +36,5 @@
                                 %h4 Rachel Hemsey
                                 %p Founding Teacher
                     .span9
-                        %p.lead Rachel comes to Prodeo Academy from Excellence Boys Charter School of the Uncommon Schools Network. She started her career as a Teach for America Corps member. Her experience includes Lead Fourth Grade Teacher, Summer Academy Director, Kindergarten Grade Team Chair, and Lead Kindergarten Teacher. Rachel has a B.S. with Distinction from the University of Minnesota and an M.S. with Distinction from Hunter College in New York City.
+                        %p.lead Rachel comes to Prodeo Academy from Excellence Boys Charter School of the Uncommon Schools Network. She started her career as a Teach for America Corps member. Her experience includes Lead Fourth Grade Teacher, Summer Academy Director, Kindergarten Grade Team Chair, and Lead Kindergarten Teacher. Rachel has a B.S. with Distinction from the University of Minnesota and a M.S. with Distinction from Hunter College in New York City.
                 %br
