Add "Schedule a Visit" etc

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -234,6 +234,10 @@ blockquote {
     border-left: 4px solid rgb(159, 20, 22);
 }
 
+footer span {
+    padding: 10px;
+}
+
 /* *
    * PANELS
    *
