--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -46,12 +46,14 @@
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Contact Us
                                 %span.caret
-                            = submenu(["Apply to Teach", "Apply to Tutor", "Volunteer"], "Contact")
+                            = submenu(["Apply to Teach", "Apply to Tutor", "Volunteer", "Schedule a Visit"], "Contact")
         = yield
         %footer
             .container
                 .pull-left
-                    &copy; Copyright 2013 Prodeo Academy
+                    %span &copy; Copyright 2013 Prodeo Academy
+                    |
+                    %span 1555 40th Ave NE Minneapolis 55421
                 .pull-right
                     %a{:href => "#"} Terms of Use
                     |
